[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Screen Shot 2023-08-04 at 1.00.08 AM.png" type="Texture" id=1]
[ext_resource path="res://BosqueSombra/Bosque_Menu.gd" type="Script" id=2]
[ext_resource path="res://assets/atras.png" type="Texture" id=3]
[ext_resource path="res://assets/pregunta_boton.png" type="Texture" id=4]
[ext_resource path="res://assets/jugar_boton.png" type="Texture" id=5]
[ext_resource path="res://assets/Paomedia-Small-N-Flat-Book.1024.png" type="Texture" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Fondo" type="TextureRect" parent="."]
margin_right = 2446.0
margin_bottom = 1258.0
rect_scale = Vector2( 0.418, 0.42 )
texture = ExtResource( 1 )

[node name="Home" type="TextureButton" parent="."]
margin_left = 11.0
margin_top = 9.0
margin_right = 68.0
margin_bottom = 50.0
texture_normal = ExtResource( 3 )
expand = true

[node name="help" type="TextureButton" parent="."]
margin_left = 965.0
margin_top = 6.0
margin_right = 1015.0
margin_bottom = 56.0
texture_normal = ExtResource( 4 )
expand = true

[node name="sonidos" type="AudioStreamPlayer2D" parent="."]

[node name="Jugar" type="TextureButton" parent="."]
margin_left = 380.0
margin_top = 360.0
margin_right = 632.0
margin_bottom = 461.0
texture_normal = ExtResource( 5 )
expand = true

[node name="almanque" type="TextureButton" parent="."]
margin_left = 968.0
margin_top = 69.0
margin_right = 1010.0
margin_bottom = 111.0
texture_normal = ExtResource( 6 )
expand = true

[connection signal="pressed" from="Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="Jugar" to="." method="_on_Jugar_pressed"]
[connection signal="pressed" from="almanque" to="." method="_on_almanque_pressed"]
